--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+remappings = ["@chainlink/contracts=lib/chainlink-brownie-contracts/contracts"]
+
+[invariant]
+runs = 128
+depth = 128 # this determines the statefullness and statelessness of a test, like setting it to 128, for 128 runs, each fuzz will run 128 times with 128 values without even loosing the older record
+fail_on_revert = true
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
